--- a/app2/package.json
+++ b/app2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app1",
+  "name": "app2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,17 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "single-spa-react": "^6.0.1"
+  },
+  "devDependencies": {
     "@apollo/client": "^3.9.7",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
-    "graphql": "^16.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "single-spa-react": "^6.0.1",
-    "typescript": "^5.4.2"
-  },
-  "devDependencies": {
+    "typescript": "^5.4.2",
     "@babel/core": "^7.24.0",
     "@babel/plugin-transform-runtime": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
